# CPlusPlus-Social-platform

./: CMakeLists.txt  List.h  MultiMap.h  Node.h  README.md  main.cpp
Domain/: Event.cpp  Event.h  Friend.cpp  Friend.h  Message.cpp  Message.h  User.cpp  User.h
Repository/: EventRepository.cpp  EventRepository.h  FriendRepository.cpp  FriendRepository.h  MessageRepository.cpp  MessageRepository.h  UsersRepository.cpp  UsersRepository.h
Service/: EventService.cpp  EventService.h  FriendService.cpp  FriendService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h
Tests/: Tests.cpp  Tests.h
UI/: UI.cpp  UI.h
